hphp/test/zend/good/ext/phar/tests/004.php
<?php
try {
Phar::mapPhar('hio');
} catch (Exception $e) {
echo $e->getMessage();
}
?>